Day 2 - be more specific

--- a/_posts/2018-05-21-day-2.md
+++ b/_posts/2018-05-21-day-2.md
@@ -11,7 +11,7 @@ Some changes to the site:
 2. Reduce the text size of the navigation sidebar to lower the chance of overlapping with the footer (still need a permanent solution, though).
 3. Include fallback texts for each tweet. It's essentially for the site to be searchable (a feature that will be added later).
 
-Today we have many GAN and reinforcement learning-related tweets. Personally I'm most impressed by @WSJGraphics's NLP piece.
+Today we have many GAN and reinforcement learning-related tweets. Personally I'm most impressed by @WSJGraphics's NLP piece for its neat visualization.
 
 ## GAN
 ### Add AI generated sound to AI generated paintings
