Add image tags for every post

--- a/_posts/2018-05-22-day-3.md
+++ b/_posts/2018-05-22-day-3.md
@@ -3,6 +3,9 @@ title: Day 3
 date: 2018-05-22 00:00:00 +00:00
 layout: default
 description: Translate Bach to Beethoven
+image:
+  twitter: "/public/dstotd-wide.png"
+  facebook: "/public/dstotd-wide.png"
 ---
 
 Today we have a neural network that can translate music across musical instruments, genres, and styles! And an interesting thread on anxiety from Arxiv  barrage, peopling calling out Data Science Central, and many more.
