Add 'post' layout

--- a/_posts/2018-05-20-day-1.md
+++ b/_posts/2018-05-20-day-1.md
@@ -1,7 +1,7 @@
 ---
 title: Day 1
 date: 2018-05-20 00:00:00 +00:00
-layout: default
+layout: post
 description: A thousand miles begins with a single step
 ---
 
@@ -19,7 +19,7 @@ The current theme (`jekyll-theme-leap-day`) is chosen mostly for its automatical
 
 ## Neural Style Transfer on Text
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998254595313811456">
 </amp-twitter>
@@ -27,12 +27,12 @@ The current theme (`jekyll-theme-leap-day`) is chosen mostly for its automatical
 
 ## Rules of Machine Learning
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998443201123020801">
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998468092744425472"
              data-cards="hidden">
@@ -41,7 +41,7 @@ The current theme (`jekyll-theme-leap-day`) is chosen mostly for its automatical
 
 ## Representing Model Uncertainty in Deep Learning
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="997686170346811393">
 </amp-twitter>
@@ -49,33 +49,33 @@ The current theme (`jekyll-theme-leap-day`) is chosen mostly for its automatical
 
 ## Multi-modal Database of Emotional Speech & Song
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="997267162153869312">
 </amp-twitter>
 
 ## Questions to Ask
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998253919179427841">
 </amp-twitter>
 
 ## Power of Arxiv
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998264497499459585">
 </amp-twitter>
 
 ## Discussions on Academic Publishing
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998118871033958400">
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998119733789683712">
 </amp-twitter>
@@ -83,19 +83,19 @@ The current theme (`jekyll-theme-leap-day`) is chosen mostly for its automatical
 
 ## Fun Tweets
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998037883377205249"
              data-cards="hidden">
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="997335265768230912"
              data-cards="hidden">
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="997146590442799105">
 </amp-twitter>
