--- a/_posts/2018-05-21-day-2.md
+++ b/_posts/2018-05-21-day-2.md
@@ -1,7 +1,7 @@
 ---
 title: Day 2
 date: 2018-05-21 00:00:00 +00:00
-layout: default
+layout: post
 description: Imaginary Soundscapes
 ---
 
@@ -14,20 +14,20 @@ Some changes to the site:
 Today we have many GAN and reinforcement learning-related tweets. Personally I'm most impressed by @WSJGraphics's NLP piece for its neat visualization.
 
 ### Add AI generated sound to AI generated paintings
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998710870841544704">
     <blockquote placeholder><p lang="en" dir="ltr">Adding AI generated sound to my AI generated landscape paintings with <a href="https://twitter.com/qosmo_inc?ref_src=twsrc%5Etfw">@qosmo_inc</a>&#39;s &quot;Imaginary Soundscapes&quot; paper - it&#39;s really fun. <a href="https://t.co/5gGOZGhPgI">pic.twitter.com/5gGOZGhPgI</a></p>&mdash; Robbie Barrat (@DrBeef_) <a href="https://twitter.com/DrBeef_/status/998710870841544704?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998714003441442817"
              data-conversation="none">
     <blockquote placeholder><p lang="en" dir="ltr">Woah listen to this- their AI thinks that my AI generated nude portraits are animals of some sort; so it assigns them these *really* freaky animal sounds... <a href="https://t.co/O6LxBRxMEq">pic.twitter.com/O6LxBRxMEq</a></p>&mdash; Robbie Barrat (@DrBeef_) <a href="https://twitter.com/DrBeef_/status/998714003441442817?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998714588915875840"
              data-conversation="none">
@@ -36,40 +36,40 @@ Today we have many GAN and reinforcement learning-related tweets. Personally I'm
 
 ## GAN
 ### Ramen dishes
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998616901541482497">
     <blockquote placeholder><p lang="en" dir="ltr">Interpolating through the latent space of ramen dishes uses a GAN <a href="https://t.co/gkBLuDS4ap">https://t.co/gkBLuDS4ap</a></p>&mdash; Ian Goodfellow (@goodfellow_ian) <a href="https://twitter.com/goodfellow_ian/status/998616901541482497?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998577972419248130">
     <blockquote placeholder><p lang="ja" dir="ltr">Google Driveにラーメン二郎GAN動画の元ファイルを置きました。 <a href="https://t.co/764Zd5Izyw">https://t.co/764Zd5Izyw</a> <a href="https://twitter.com/hashtag/%E3%83%A9%E3%83%BC%E3%83%A1%E3%83%B3%E4%BA%8C%E9%83%8E?src=hash&amp;ref_src=twsrc%5Etfw">#ラーメン二郎</a> <a href="https://twitter.com/hashtag/GAN?src=hash&amp;ref_src=twsrc%5Etfw">#GAN</a></p>&mdash; Kenji Doi (@knjcode) <a href="https://twitter.com/knjcode/status/998577972419248130?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ### Crypto.ai
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998780024005189632"
              data-conversation="none">
     <blockquote placeholder><p lang="en" dir="ltr">GAN + Ethereum + Anime = <a href="https://t.co/QyUgvThvHb">https://t.co/QyUgvThvHb</a> <a href="https://t.co/HUsIilntml">pic.twitter.com/HUsIilntml</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998780024005189632?ref_src=twsrc%5Etfw">May 22, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998781436277673984">
     <blockquote placeholder><p lang="en" dir="ltr">This project by <a href="https://twitter.com/_aixile?ref_src=twsrc%5Etfw">@_aixile</a> <a href="https://twitter.com/alanyttian?ref_src=twsrc%5Etfw">@alanyttian</a> et al. They presented an earlier work as a workshop paper at NIPS2017. <a href="https://t.co/dknlcPy4Om">https://t.co/dknlcPy4Om</a> <a href="https://t.co/uGXTdytlXh">https://t.co/uGXTdytlXh</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998781436277673984?ref_src=twsrc%5Etfw">May 22, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998810408759644165">
     <blockquote placeholder><p lang="en" dir="ltr">I also think the anime dataset really needs to be de-biased. I believe these projects are usually trained on the dataset graciously scraped by <a href="https://twitter.com/gwern?ref_src=twsrc%5Etfw">@gwern</a> called Danbooru2017, and more often than not the collected art are anime drawings of female characters. <a href="https://t.co/bQGaA9R9iF">https://t.co/bQGaA9R9iF</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998810408759644165?ref_src=twsrc%5Etfw">May 22, 2018</a></blockquote>
 </amp-twitter>
 
 ## Reinforcement Learning
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998659199147085824">
     <blockquote placeholder><p lang="en" dir="ltr">Reinforcement Learning - Markov Decision Process <a href="https://t.co/HGzQhMRT6a">https://t.co/HGzQhMRT6a</a> <a href="https://t.co/i27HpvZZPI">pic.twitter.com/i27HpvZZPI</a></p>&mdash; KDnuggets (@kdnuggets) <a href="https://twitter.com/kdnuggets/status/998659199147085824?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
@@ -77,129 +77,129 @@ Today we have many GAN and reinforcement learning-related tweets. Personally I'm
 
 
 ### NIPS2018 Pommerman Competition
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998576336896585729">
     <blockquote placeholder><p lang="en" dir="ltr">NIPS2018 “Pommerman” Competition, now with fresh prizes 🤖💣 <a href="https://t.co/2IyhBuhtD0">https://t.co/2IyhBuhtD0</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998576336896585729?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998390094674518016">
     <blockquote placeholder><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/nips2018?src=hash&amp;ref_src=twsrc%5Etfw">#nips2018</a> Pommerman Competition Prizes (<a href="https://t.co/6ZJeqCgj8S">https://t.co/6ZJeqCgj8S</a>):<br><br>1st: $4k USD + $6k GCE, <br>2nd: $2k USD + $4k GCE, <br>3rd: $1k USD + $2k GCE, <br>4th: $3k GCE.<br><br>Top 2 learning agents each get a Titan V GPU. <br><br>Let the games begin!</p>&mdash; Pommerman (@Pommerman) <a href="https://twitter.com/Pommerman/status/998390094674518016?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ### Reproducing papers
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998611945090637824">
     <blockquote placeholder><p lang="en" dir="ltr">Reproducing research papers is a really good way to practice your ML Skills, but it’s not easy. Read Matthew Rahtz’s insights from his first go at reproducing a Deep Reinforcement Learning paper: <a href="https://t.co/mqOnPOBqr7">https://t.co/mqOnPOBqr7</a></p>&mdash; Kaggle (@kaggle) <a href="https://twitter.com/kaggle/status/998611945090637824?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998699340397858817">
     <blockquote placeholder><p lang="en" dir="ltr">This post about DeepRL reproducibility has caused much discussion in the past while. In my view, I don&#39;t think it should be this difficult to reproduce a paper, even partially. That fact that it was so painful might imply that there are fundamental issues w/ the proposed methods. <a href="https://t.co/kVmDHfYbda">https://t.co/kVmDHfYbda</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998699340397858817?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ### Duckietown
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998572185722740737">
     <blockquote placeholder><p lang="en" dir="ltr">Building a Simple Self-Driving Car Simulator <a href="https://t.co/FSgRHyRZLd">https://t.co/FSgRHyRZLd</a></p>&mdash; Maxime Chevalier (@Love2Code) <a href="https://twitter.com/Love2Code/status/998572185722740737?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998706495255539712">
     <blockquote placeholder><p lang="en" dir="ltr">Duckietown: self-driving car simulator environments for OpenAI Gym. Created by <a href="https://twitter.com/Love2Code?ref_src=twsrc%5Etfw">@Love2Code</a> et al.<br>repo: <a href="https://t.co/UV1XJe5qXK">https://t.co/UV1XJe5qXK</a><br>blog: <a href="https://t.co/QV26yTTrEI">https://t.co/QV26yTTrEI</a> <a href="https://t.co/490ETJCFVH">pic.twitter.com/490ETJCFVH</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/998706495255539712?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ## NLP
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998647403514290177">
     <blockquote placeholder><p lang="en" dir="ltr">Some of my thoughts on ai and the future of chat bots:<a href="https://t.co/a9Fm1AXFkY">https://t.co/a9Fm1AXFkY</a></p>&mdash; Richard (@RichardSocher) <a href="https://twitter.com/RichardSocher/status/998647403514290177?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998579345479303168">
     <blockquote placeholder><p lang="en" dir="ltr">Do you write like a fourth-grader? Find out what kind of impression your words make using algorithms that score context, mood and equivalent grade-level. <a href="https://t.co/XKey7dp9ny">https://t.co/XKey7dp9ny</a> via <a href="https://twitter.com/WSJGraphics?ref_src=twsrc%5Etfw">@WSJGraphics</a> <a href="https://t.co/Wqc6P4Ygn2">pic.twitter.com/Wqc6P4Ygn2</a></p>&mdash; WSJ Graphics (@WSJGraphics) <a href="https://twitter.com/WSJGraphics/status/998579345479303168?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ### Transfer Learning
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998496505207148545">
     <blockquote placeholder><p lang="en" dir="ltr">Better and faster text classification models by transfer learning presented by Sebastian Ruder <a href="https://twitter.com/seb_ruder?ref_src=twsrc%5Etfw">@seb_ruder</a> from <a href="https://twitter.com/insight_centre?ref_src=twsrc%5Etfw">@insight_centre</a>, co-authored by Jeremy Howard <a href="https://twitter.com/jeremyphoward?ref_src=twsrc%5Etfw">@jeremyphoward</a> from <a href="https://twitter.com/fastdotai?ref_src=twsrc%5Etfw">@fastdotai</a> <a href="https://twitter.com/hashtag/InsightDL2018?src=hash&amp;ref_src=twsrc%5Etfw">#InsightDL2018</a> <a href="https://t.co/MppK2VgUN8">pic.twitter.com/MppK2VgUN8</a></p>&mdash; Xavier Giró-i-Nieto 🎗 (@DocXavi) <a href="https://twitter.com/DocXavi/status/998496505207148545?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998627529211744258">
     <blockquote placeholder><p lang="en" dir="ltr">Slides for my keynote this morning on Successes and Frontiers of Deep Learning are now online. Mainly a high-level overview of some important and exciting application areas + some recent work on semi-supervised / transfer learning. <a href="https://t.co/uVcLtbHSuT">https://t.co/uVcLtbHSuT</a></p>&mdash; Sebastian Ruder (@seb_ruder) <a href="https://twitter.com/seb_ruder/status/998627529211744258?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ## Visualization
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998618172306604032">
     <blockquote placeholder><p lang="en" dir="ltr">How to win a trade war --&gt; <a href="https://t.co/oEhGYpKzul">https://t.co/oEhGYpKzul</a></p>&mdash; FiveThirtyEight (@FiveThirtyEight) <a href="https://twitter.com/FiveThirtyEight/status/998618172306604032?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998715014394662912">
     <blockquote placeholder><p lang="en" dir="ltr">For those that haven&#39;t seen it, matplotlib 2.2 has a layout engine. Update now and set <a href="https://t.co/BYw43RVBY6">https://t.co/BYw43RVBY6</a> to True in your matplotlib.rc - and live happily ever after. <a href="https://t.co/B6qx3yrqCx">https://t.co/B6qx3yrqCx</a></p>&mdash; Andreas Mueller (@amuellerml) <a href="https://twitter.com/amuellerml/status/998715014394662912?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998563688142401543">
     <blockquote placeholder><p lang="en" dir="ltr">Interesting simulation experiment: Throwing 1,000 needles to estimate Pi. <a href="https://twitter.com/hashtag/DataScience?src=hash&amp;ref_src=twsrc%5Etfw">#DataScience</a> <a href="https://twitter.com/hashtag/dataviz?src=hash&amp;ref_src=twsrc%5Etfw">#dataviz</a><br><br>Read more about Buffon&#39;s needle here: <a href="https://t.co/CiQRAeM0ql">https://t.co/CiQRAeM0ql</a><a href="https://t.co/jKQRDfMUzw">https://t.co/jKQRDfMUzw</a> <a href="https://t.co/LHCPACeevN">pic.twitter.com/LHCPACeevN</a></p>&mdash; Randy Olson (@randal_olson) <a href="https://twitter.com/randal_olson/status/998563688142401543?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998564220341022722">
     <blockquote placeholder><p lang="en" dir="ltr">Beautiful and Powerful Correlation Tables in R <a href="https://t.co/SX3EwfxnxN">https://t.co/SX3EwfxnxN</a> <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/DataScience?src=hash&amp;ref_src=twsrc%5Etfw">#DataScience</a></p>&mdash; R-bloggers (@Rbloggers) <a href="https://twitter.com/Rbloggers/status/998564220341022722?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ## PyCon 2018 Videos
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998549068547788800">
     <blockquote placeholder><p lang="et" dir="ltr">PyCon 2018 Videos  <a href="https://t.co/xDW3DEDV6u">https://t.co/xDW3DEDV6u</a> <a href="https://twitter.com/hashtag/python?src=hash&amp;ref_src=twsrc%5Etfw">#python</a> <a href="https://twitter.com/hashtag/pycon?src=hash&amp;ref_src=twsrc%5Etfw">#pycon</a> <a href="https://t.co/s874SRpCZl">pic.twitter.com/s874SRpCZl</a></p>&mdash; Python Weekly (@PythonWeekly) <a href="https://twitter.com/PythonWeekly/status/998549068547788800?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ## Fast.ai
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998646245152382978">
     <blockquote placeholder><p lang="en" dir="ltr">One of our students has started on a nice overview of the fastai library<a href="https://t.co/h4NADgWQqp">https://t.co/h4NADgWQqp</a> <a href="https://t.co/Vw0DFcYkMu">pic.twitter.com/Vw0DFcYkMu</a></p>&mdash; Jeremy Howard (@jeremyphoward) <a href="https://twitter.com/jeremyphoward/status/998646245152382978?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998614754863136768">
     <blockquote placeholder><p lang="en" dir="ltr">Complete Guide to Parameter Tuning in XGBoost <a href="https://t.co/IGpkYkfsP9">https://t.co/IGpkYkfsP9</a></p>&mdash; Jeremy Howard (@jeremyphoward) <a href="https://twitter.com/jeremyphoward/status/998614754863136768?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
 ## Miscellaneous
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="997970405825576960">
     <blockquote placeholder><p lang="en" dir="ltr">Meghan&#39;s friends introduced her to a prince. The only people I get introduced to are tech bros who say &quot;I have the next big startup idea. It&#39;s like Uber but for dogs and it uses blockchain and VR. I need you to build everything and I&#39;ll pay you in equity&quot; smh.</p>&mdash; Jesslyn 🇮🇩 (@jtannady) <a href="https://twitter.com/jtannady/status/997970405825576960?ref_src=twsrc%5Etfw">May 19, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998596414492966912">
     <blockquote placeholder><p lang="en" dir="ltr">By age 31, you should have conquered the largest empire known to man and founded 20 cities, retirement experts say <a href="https://t.co/J9gT5JP06s">pic.twitter.com/J9gT5JP06s</a></p>&mdash; François Chollet (@fchollet) <a href="https://twitter.com/fchollet/status/998596414492966912?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
 </amp-twitter>
 
-<amp-twitter width="400" height="500"
+<amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="998653319781363712">
     <blockquote placeholder><p lang="en" dir="ltr">The value is not in abstract ideation, it is in correctly evaluating the potential of your various ideas, and successfully executing on the most powerful ones.</p>&mdash; François Chollet (@fchollet) <a href="https://twitter.com/fchollet/status/998653319781363712?ref_src=twsrc%5Etfw">May 21, 2018</a></blockquote>
