--- a/_posts/2018-05-24-day-5.md
+++ b/_posts/2018-05-24-day-5.md
@@ -7,6 +7,8 @@ description: Pretentiousness Vector
 
 Today we have a spell checker based on word vectors, and noising and denoising natural language to get a corpus for grammar correction.
 
+Uploaded layout for a single post. Clicking into a post will have its headers properly displayed now.
+
 ## Spell Checking
 <amp-twitter width="400" height="400"
              layout="responsive"
