--- a/_posts/2018-05-24-day-5.md
+++ b/_posts/2018-05-24-day-5.md
@@ -85,7 +85,7 @@ MURA (musculoskeletal radiographs) is a large dataset of bone X-rays.
 </amp-twitter>
 
 ## Pandas 0.23
-Warning: I've experienced an incompatibility issue in an older Python 3.5.
+Warning: I've experienced [an incompatibility issue](https://github.com/pandas-dev/pandas/pull/21098) with an older Python 3.5.
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="999681864423149569">
