Day 6 Take 2: Add one more notable from @seb_ruder

--- a/_posts/2018-05-25-day-6.md
+++ b/_posts/2018-05-25-day-6.md
@@ -71,6 +71,12 @@ description: GDPR Day
 ## Notables
 <amp-twitter width="400" height="500"
              layout="responsive"
+             data-tweetid="1000137890905673728">
+    <blockquote placeholder><p lang="en" dir="ltr">As a non-native English speaker, I&#39;m always interested in studies that seek to better understand l2 acquisition. This paper does a great job. It shows that cognates (words with the same etymological origin) influence the English of non-native speakers. <a href="https://t.co/WebVtLFoWj">https://t.co/WebVtLFoWj</a></p>&mdash; Sebastian Ruder (@seb_ruder) <a href="https://twitter.com/seb_ruder/status/1000137890905673728?ref_src=twsrc%5Etfw">May 25, 2018</a></blockquote>
+</amp-twitter>
+
+<amp-twitter width="400" height="500"
+             layout="responsive"
              data-tweetid="1000030284484694017">
     <blockquote placeholder><p lang="en" dir="ltr">This is a super useful paper that we need more of: Better ImageNet models are not necessarily better feature extractors (ResNet is best); but for fine-tuning, ImageNet performance is strongly correlated with downstream performance.   <a href="https://t.co/MrkX4yYgHn">https://t.co/MrkX4yYgHn</a></p>&mdash; Sebastian Ruder (@seb_ruder) <a href="https://twitter.com/seb_ruder/status/1000030284484694017?ref_src=twsrc%5Etfw">May 25, 2018</a></blockquote>
 </amp-twitter>
