--- a/_posts/2018-05-27-day-8.md
+++ b/_posts/2018-05-27-day-8.md
@@ -7,7 +7,7 @@ description: Rocket Lander
 
 There are usually fewer tweets in the weekends. Luckily, we have some older tweets retweeted by people I follow.
 
-I've added a very basic [search page](/search.html) powered by Algolia. The free plan should get us covered for at least six month.
+I've added a very basic [search page](/search.html) powered by Algolia. The free plan should get us covered for at least six months.
 
 ## Rocket Lander
 <amp-twitter width="400" height="400"
@@ -26,10 +26,11 @@ I've added a very basic [search page](/search.html) powered by Algolia. The free
 
 <amp-twitter width="400" height="400"
              layout="responsive"
-             data-tweetid="1000915935337709569"
+             data-tweetid="1000917337246121984"
              data-conversation="none">
-    <blockquote placeholder><p lang="en" dir="ltr">If you are interested in using neural networks for challenging rocket control problems, here&#39;s a paper from 2003 that uses Neuroevolution to train a neural network for controlling a difficult “finless” rocket.<br>Slides (34-38): <a href="https://t.co/rB0ZF5XoV7">https://t.co/rB0ZF5XoV7</a> <a href="https://t.co/E8LD3og2SF">pic.twitter.com/E8LD3og2SF</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/1000915935337709569?ref_src=twsrc%5Etfw">May 28, 2018</a></blockquote>
+    <blockquote placeholder><p lang="en" dir="ltr">“Active Guidance for a Finless Rocket Using Neuroevolution” (2003), by Faustino J. Gomez and Risto Miikkulainen. They won a best paper award at GECCO2003. Gomez went on to start <a href="https://twitter.com/nnaisense?ref_src=twsrc%5Etfw">@nnaisense</a> with Schmidhuber, and Miikkulainen started <a href="https://t.co/uxSJNlC5dm">https://t.co/uxSJNlC5dm</a>. <a href="https://t.co/NAOY1a1OPj">https://t.co/NAOY1a1OPj</a> <a href="https://t.co/v9DP7SCGAL">pic.twitter.com/v9DP7SCGAL</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/1000917337246121984?ref_src=twsrc%5Etfw">May 28, 2018</a></blockquote>
 </amp-twitter>
+
 
 ## LIME on Random Forest
 <amp-twitter width="400" height="400"
