Day 8 Take 3: Grammar

--- a/_posts/2018-05-27-day-8.md
+++ b/_posts/2018-05-27-day-8.md
@@ -5,7 +5,7 @@ layout: post
 description: Rocket Lander
 ---
 
-There are usually fewer tweets in the weekends. Luckily, we have some older tweets retweeted by people I follow.
+There are usually fewer tweets during the weekends. Luckily, we have some older tweets retweeted by people I follow.
 
 I've added a very basic [search page](/search.html) powered by Algolia. The free plan should get us covered for at least six months.
 
