--- a/_posts/2018-05-28-day-9.md
+++ b/_posts/2018-05-28-day-9.md
@@ -119,6 +119,13 @@ I've seen Yellowbrick being mentioned several times. Probably worth trying out.
 
 <amp-twitter width="400" height="400"
              layout="responsive"
+             data-tweetid="1001085211118133248">
+    <blockquote placeholder><p lang="en" dir="ltr">Turns out that healthcare is complicated. And combining medicine, math, and computing to produce breakthroughs is hard. Still someone will do it. Just not IBM right now. <a href="https://t.co/AM9CEnwjsn">https://t.co/AM9CEnwjsn</a> <a href="https://twitter.com/hashtag/AI?src=hash&amp;ref_src=twsrc%5Etfw">#AI</a> <a href="https://twitter.com/hashtag/MachineLearning?src=hash&amp;ref_src=twsrc%5Etfw">#MachineLearning</a> <a href="https://twitter.com/hashtag/BigData?src=hash&amp;ref_src=twsrc%5Etfw">#BigData</a> <a href="https://twitter.com/hashtag/DigitalHealth?src=hash&amp;ref_src=twsrc%5Etfw">#DigitalHealth</a> <a href="https://t.co/eZccq5K3qG">pic.twitter.com/eZccq5K3qG</a></p>&mdash; Harlan Krumholz (@hmkyale) <a href="https://twitter.com/hmkyale/status/1001085211118133248?ref_src=twsrc%5Etfw">May 28, 2018</a></blockquote>
+</amp-twitter>
+
+
+<amp-twitter width="400" height="400"
+             layout="responsive"
              data-tweetid="1001291221141078016">
     <blockquote placeholder><p lang="en" dir="ltr">That does it. I am officially switching back to “Statistician”. <a href="https://t.co/qpHO1qXpzk">pic.twitter.com/qpHO1qXpzk</a></p>&mdash; David Smith (@revodavid) <a href="https://twitter.com/revodavid/status/1001291221141078016?ref_src=twsrc%5Etfw">May 29, 2018</a></blockquote>
 </amp-twitter>
