--- a/_posts/2018-05-30-day-11.md
+++ b/_posts/2018-05-30-day-11.md
@@ -31,7 +31,7 @@ StackOverflow published 2018 Developer Survey on Kaggle. There are two $1000 awa
 </amp-twitter>
 
 ## Landmark Recognition (Kaggle)
-[We covered the 1st place solution of the Landmark Retrieval challenge in Day 10.](https://www.datasciencetweetsoftheday.ml/post/2018/05/29/day-10/#landmark-retrieval-kaggle)
+(Note: [We covered the 1st place solution of the Landmark Retrieval challenge in Day 10.](https://www.datasciencetweetsoftheday.ml/post/2018/05/29/day-10/#landmark-retrieval-kaggle))
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1001876495567130629"
