Day 13 Take 2: Small tweak

--- a/_posts/2018-06-01-day-13.md
+++ b/_posts/2018-06-01-day-13.md
@@ -102,7 +102,8 @@ There are so many great tweets today that it's almost overwhelming. Enjoy!
 
 <amp-twitter width="400" height="400"
              layout="responsive"
-             data-tweetid="1002616036997332992">
+             data-tweetid="1002616036997332992"
+             data-conversation="none">
     <blockquote placeholder><p lang="en" dir="ltr">Diversity and inclusion *require* intentionality… Great write-up by <a href="https://twitter.com/Lady_Ada_King?ref_src=twsrc%5Etfw">@Lady_Ada_King</a> <a href="https://t.co/YFMPxfxETn">https://t.co/YFMPxfxETn</a></p>&mdash; Mara Averick (@dataandme) <a href="https://twitter.com/dataandme/status/1002616036997332992?ref_src=twsrc%5Etfw">June 1, 2018</a></blockquote>
 </amp-twitter>
 
