Day 14 Take 2: Fix a Link

--- a/_posts/2018-06-02-day-14.md
+++ b/_posts/2018-06-02-day-14.md
@@ -34,7 +34,7 @@ Quite a few tweets popped out this day with #NAACL2018 hashtag. I'm not organizi
 </amp-twitter>
 
 ## [Ethics] On Gender Imbalance (Cont.)
-[Continuing the topic from Yesterday](https://www.datasciencetweetsoftheday/post/2018/06/01/day-13/#ethics-on-gender-imbalance-in-conferences)
+[Continuing the topic from Yesterday](https://www.datasciencetweetsoftheday.ml/post/2018/06/01/day-13/#ethics-on-gender-imbalance-in-conferences)
 
 <amp-twitter width="400" height="400"
              layout="responsive"
