--- a/_posts/2018-05-31-day-12.md
+++ b/_posts/2018-05-31-day-12.md
@@ -7,7 +7,7 @@ redirect_from:
   - /post/2018/05/31/Day-12/
 ---
 
-Today we have a dedicated section for ethical issues. They may not directly related to data science, but I believe that we tech workers need to have a firm grasp of how our work is going to affect our people's life, and make moral decisions. As Dwight D. Eisenhower put it, “**A people that values its privileges above its principles soon loses both.**” :pensive:
+Today we have a dedicated section for ethical issues. They may not directly related to data science, but I believe that we tech workers need to have a firm grasp of how our work is going to affect our people's life, and make moral decisions. As Dwight D. Eisenhower put it, “**A people that values its privileges above its principles soon loses both.**” 😔
 
 ## Competition on Adversarial Attacks & Defences
 <amp-twitter width="400" height="400"
