Day 16 Take 2: Grammar

--- a/_posts/2018-06-04-day-16.md
+++ b/_posts/2018-06-04-day-16.md
@@ -5,7 +5,7 @@ layout: post
 description: AutoAugment
 ---
 
-The most interesting news today is Google introducing a algorithm which automatically find optimal image augmentation policies, and a paper investigating the possible overfitting in published CIFAR-10 models.
+The most interesting news today is Google introducing an algorithm which automatically finds optimal image augmentation policies, and a paper investigating the possible overfitting in published CIFAR-10 models.
 
 ## AutoAugment
 <amp-twitter width="400" height="400"
