Day 17 Take 2: be more specific

--- a/_posts/2018-06-05-day-17.md
+++ b/_posts/2018-06-05-day-17.md
@@ -5,7 +5,7 @@ layout: post
 description: "Real Research"
 ---
 
-Yet another "controversy" (to put it mildly) surface today. Udacity and Google launch free courses. And people debating what constitutes "Real Research" (check the first tweet in the [Miscellaneous](#miscellaneous) section).
+Yet another Facebook "controversy" (to put it mildly) surface today. Udacity and Google launch free courses. And people debating what constitutes "Real Research" (check the first tweet in the [Miscellaneous](#miscellaneous) section).
 
 ## [ethics] Facebook Sharing Data
 <amp-twitter width="400" height="400"
