Day 18 Take 2: Fix weird typos

--- a/_posts/2018-06-06-day-18.md
+++ b/_posts/2018-06-06-day-18.md
@@ -5,8 +5,8 @@ layout: post
 description: Psychopath AI
 ---
 
-Today we witness the birth of the world's first psychopath AI - Norman. And another beutiful work by Nathan Yao @flowingdata.s
-s
+Today we witness the birth of the world's first psychopath AI - Norman. And another beutiful work by Nathan Yao @flowingdata.
+
 ## Spiking Neural Networks
 <amp-twitter width="400" height="400"
              layout="responsive"
