Add redirection from old AMP URLs

--- a/_posts/2018-05-21-day-2.md
+++ b/_posts/2018-05-21-day-2.md
@@ -3,6 +3,8 @@ title: Day 2
 date: 2018-05-21 00:00:00 +00:00
 layout: post
 description: Imaginary Soundscapes
+redirect_from:
+  - /amp/post/2018/05/21/day-2.html
 ---
 
 Some changes to the site:
