--- a/_posts/2018-05-22-day-3.md
+++ b/_posts/2018-05-22-day-3.md
@@ -3,6 +3,8 @@ title: Day 3
 date: 2018-05-22 00:00:00 +00:00
 layout: post
 description: Translate Bach to Beethoven
+redirect_from:
+  - /amp/post/2018/05/22/day-3.html
 ---
 
 Today we have a neural network that can translate music across musical instruments, genres, and styles! And an interesting thread on anxiety from Arxiv  barrage, peopling calling out Data Science Central, and many more.
