--- a/_posts/2018-05-23-day-4.md
+++ b/_posts/2018-05-23-day-4.md
@@ -3,6 +3,8 @@ title: Day 4
 date: 2018-05-23 00:00:00 +00:00
 layout: post
 description: Model Size < 1GB
+redirect_from:
+  - /amp/post/2018/05/23/day-4.html
 ---
 
 It's a relatively quite day. The biggest news is probably the launch of a new Kaggle competition with a 1-GB model size restriction; a brand new approach AFAIK.
