--- a/_posts/2018-05-24-day-5.md
+++ b/_posts/2018-05-24-day-5.md
@@ -3,6 +3,8 @@ title: Day 5
 date: 2018-05-24 00:00:00 +00:00
 layout: post
 description: Pretentiousness Vector
+redirect_from:
+  - /amp/post/2018/05/24/day-5.html
 ---
 
 Today we have a spell checker based on word vectors, and noising and denoising natural language to get a corpus for grammar correction.
