--- a/_posts/2018-05-25-day-6.md
+++ b/_posts/2018-05-25-day-6.md
@@ -3,6 +3,8 @@ title: Day 6
 date: 2018-05-25 00:00:00 +00:00
 layout: post
 description: GDPR Day
+redirect_from:
+  - /amp/post/2018/05/25/day-6.html
 ---
 
 <amp-twitter width="400" height="400"
