--- a/_posts/2018-05-26-day-7.md
+++ b/_posts/2018-05-26-day-7.md
@@ -3,6 +3,8 @@ title: Day 7
 date: 2018-05-26 00:00:00 +00:00
 layout: post
 description: Archives
+redirect_from:
+  - /amp/post/2018/05/26/day-7.html
 ---
 
 This site now comes with archive pages that make history posts more accessible. Next on the list is adding a search box.
