--- a/_posts/2018-05-27-day-8.md
+++ b/_posts/2018-05-27-day-8.md
@@ -3,6 +3,8 @@ title: Day 8
 date: 2018-05-27 00:00:00 +00:00
 layout: post
 description: Rocket Lander
+redirect_from:
+  - /amp/post/2018/05/27/day-8.html
 ---
 
 There are usually fewer tweets on weekends. Luckily, we have some older tweets retweeted by people I follow.
