--- a/_posts/2018-05-28-day-9.md
+++ b/_posts/2018-05-28-day-9.md
@@ -3,6 +3,8 @@ title: Day 9
 date: 2018-05-28 00:00:00 +00:00
 layout: post
 description: Switching Back to "Statistician"
+redirect_from:
+  - /amp/post/2018/05/28/day-9.html
 ---
 
 (Today is Memorial Day in the U.S., hence data science related tweets are sparser.)
