--- a/_posts/2018-05-29-day-10.md
+++ b/_posts/2018-05-29-day-10.md
@@ -3,6 +3,8 @@ title: Day 10
 date: 2018-05-29 00:00:00 +00:00
 layout: post
 description: Bayesian Statistics Needs a Prayer
+redirect_from:
+  - /amp/post/2018/05/29/day-10.html
 ---
 
 We've reached double-digit number! Tons of good tweets for you today. Read on! :metal:
