--- a/_posts/2018-05-30-day-11.md
+++ b/_posts/2018-05-30-day-11.md
@@ -3,6 +3,8 @@ title: Day 11
 date: 2018-05-30 00:00:00 +00:00
 layout: post
 description: 2018 Developer Survey
+redirect_from:
+  - /amp/post/2018/05/30/day-11.html
 ---
 
 [Fast.ai library](https://github.com/fastai/fastai) helped Radek win 1st in ["iMaterialist Challenge (Fashion) at FGVC5" competition](https://www.kaggle.com/c/imaterialist-challenge-fashion-2018). It also helped Alexandr Kalinin, who got 4th place in [Google Landmark Recognition Challenge](https://www.kaggle.com/c/landmark-recognition-challenge). In additional to the  outline of the solution, Radek also shared his inspiring story.
