--- a/_posts/2018-06-01-day-13.md
+++ b/_posts/2018-06-01-day-13.md
@@ -3,6 +3,8 @@ title: Day 13
 date: 2018-06-01 00:00:00 +00:00
 layout: post
 description: No More Project Maven
+redirect_from:
+  - /amp/post/2018/06/01/day-13.html
 ---
 
 There are so many great tweets today that it's almost overwhelming. Enjoy!
