--- a/_posts/2018-06-04-day-16.md
+++ b/_posts/2018-06-04-day-16.md
@@ -3,6 +3,8 @@ title: Day 16
 date: 2018-06-04 00:00:00 +00:00
 layout: post
 description: AutoAugment
+redirect_from:
+  - /amp/post/2018/06/04/day-16.html
 ---
 
 The most interesting news today is Google introducing an algorithm which automatically finds optimal image augmentation policies, and a paper investigating the possible overfitting in published CIFAR-10 models.
