--- a/_posts/2018-06-05-day-17.md
+++ b/_posts/2018-06-05-day-17.md
@@ -3,6 +3,8 @@ title: Day 17
 date: 2018-06-05 00:00:00 +00:00
 layout: post
 description: "Real Research"
+redirect_from:
+  - /amp/post/2018/06/05/day-17.html
 ---
 
 Yet another Facebook "controversy" (to put it mildly) surface today. Udacity and Google launch free courses. And people debating what constitutes "Real Research" (check the first tweet in the [Miscellaneous](#miscellaneous) section).
