--- a/_posts/2018-06-06-day-18.md
+++ b/_posts/2018-06-06-day-18.md
@@ -3,6 +3,8 @@ title: Day 18
 date: 2018-06-06 00:00:00 +00:00
 layout: post
 description: Psychopath AI
+redirect_from:
+  - /amp/post/2018/06/06/day-18.html
 ---
 
 Today we witness the birth of the world's first psychopath AI - Norman. And another beutiful work by Nathan Yao @flowingdata.
