--- a/_posts/2018-06-08-day-20.md
+++ b/_posts/2018-06-08-day-20.md
@@ -3,6 +3,8 @@ title: Day 20
 date: 2018-06-08 00:00:00 +00:00
 layout: post
 description: AI Patents
+redirect_from:
+  - /amp/post/2018/06/08/day-20.html
 ---
 
 ## Visualization
