--- a/_posts/2018-06-09-day-21.md
+++ b/_posts/2018-06-09-day-21.md
@@ -3,6 +3,8 @@ title: Day 21
 date: 2018-06-09 00:00:00 +00:00
 layout: post
 description: Tensorflow 1.9
+redirect_from:
+  - /amp/post/2018/06/09/day-21.html
 ---
 
 ## Suicide Prevention
