--- a/_posts/2018-05-20-day-1.md
+++ b/_posts/2018-05-20-day-1.md
@@ -3,6 +3,8 @@ title: Day 1
 date: 2018-05-20 00:00:00 +00:00
 layout: post
 description: A thousand miles begins with a single step
+redirect_from:
+  - /amp/post/2018/05/20/day-1.html
 ---
 
 ## Introduction and Acknowledgement
