--- a/_posts/2018-06-02-day-14.md
+++ b/_posts/2018-06-02-day-14.md
@@ -3,6 +3,8 @@ title: Day 14
 date: 2018-06-02 00:00:00 +00:00
 layout: post
 description: NAACL 2018
+redirect_from:
+  - /amp/post/2018/06/02/3ay-14.html
 ---
 
 Quite a few tweets popped out this day with #NAACL2018 hashtag. I'm not organizing them into one single section, though. They are scattered in different sections.
