--- a/_posts/2018-06-03-day-15.md
+++ b/_posts/2018-06-03-day-15.md
@@ -3,6 +3,8 @@ title: Day 15
 date: 2018-06-03 00:00:00 +00:00
 layout: post
 description: Lebron is Disappointed
+redirect_from:
+  - /amp/post/2018/06/03/day-15.html
 ---
 
 Today we have a few very creative [Lebron James memes](#lebron-memes)(you're welcome to submit more similar memes!), and a interesting discussion thread about symbolic and deep learning systems.
