--- a/_posts/2018-06-07-day-19.md
+++ b/_posts/2018-06-07-day-19.md
@@ -3,6 +3,8 @@ title: Day 19
 date: 2018-06-07 00:00:00 +00:00
 layout: post
 description: Google AI Principles
+redirect_from:
+  - /amp/post/2018/06/07/day-19.html
 ---
 
 ## Real Person to Anime
