Day 29 Take 2: Add one more tweet and re-organize

--- a/_posts/2018-06-17-day-29.md
+++ b/_posts/2018-06-17-day-29.md
@@ -74,6 +74,19 @@ description: Maven Moment for Microsoft?
 
 <amp-twitter width="400" height="400"
              layout="responsive"
+             data-tweetid="1006966996246908931">
+    <blockquote placeholder><p lang="en" dir="ltr">My first  project for <a href="https://twitter.com/DataCamp?ref_src=twsrc%5Etfw">@DataCamp</a> launched today! <a href="https://t.co/mPBDCYeCUF">https://t.co/mPBDCYeCUF</a><br>Thanks to <a href="https://twitter.com/venturidb?ref_src=twsrc%5Etfw">@venturidb</a> for all his help with the launch. If you like the <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> or want to learn it, you&#39;ll love this project! It&#39;s meant to complement <a href="https://twitter.com/drob?ref_src=twsrc%5Etfw">@drob</a>&#39;s tidyverse course. <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/datascience?src=hash&amp;ref_src=twsrc%5Etfw">#datascience</a></p>&mdash; Sam Tyner (@sctyner) <a href="https://twitter.com/sctyner/status/1006966996246908931?ref_src=twsrc%5Etfw">June 13, 2018</a></blockquote>
+</amp-twitter>
+
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1007669101764935681">
+    <blockquote placeholder><p lang="en" dir="ltr">new blog post: a casual case study on how to speed up <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> code featuring xml2, rcpp and furrr<a href="https://t.co/KOACH1O8dy">https://t.co/KOACH1O8dy</a> <a href="https://t.co/63T0SMsxH7">pic.twitter.com/63T0SMsxH7</a></p>&mdash; alex hayes (@alexpghayes) <a href="https://twitter.com/alexpghayes/status/1007669101764935681?ref_src=twsrc%5Etfw">June 15, 2018</a></blockquote>
+</amp-twitter>
+
+### Coin Flip Simulation 
+<amp-twitter width="400" height="400"
+             layout="responsive"
              data-tweetid="1008409373423611904">
     <blockquote placeholder><p lang="en" dir="ltr">A <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> simulation to demonstrate that if you wait for two heads in a row, it takes 6 flips on average, while you wait for a heads then a tails, it takes 4 flips on average<br><br>h/t <a href="https://twitter.com/CutTheKnotMath?ref_src=twsrc%5Etfw">@CutTheKnotMath</a> <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://t.co/V0zgOmCy7t">pic.twitter.com/V0zgOmCy7t</a></p>&mdash; David Robinson (@drob) <a href="https://twitter.com/drob/status/1008409373423611904?ref_src=twsrc%5Etfw">June 17, 2018</a></blockquote>
 </amp-twitter>
@@ -87,14 +100,8 @@ description: Maven Moment for Microsoft?
 
 <amp-twitter width="400" height="400"
              layout="responsive"
-             data-tweetid="1006966996246908931">
-    <blockquote placeholder><p lang="en" dir="ltr">My first  project for <a href="https://twitter.com/DataCamp?ref_src=twsrc%5Etfw">@DataCamp</a> launched today! <a href="https://t.co/mPBDCYeCUF">https://t.co/mPBDCYeCUF</a><br>Thanks to <a href="https://twitter.com/venturidb?ref_src=twsrc%5Etfw">@venturidb</a> for all his help with the launch. If you like the <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> or want to learn it, you&#39;ll love this project! It&#39;s meant to complement <a href="https://twitter.com/drob?ref_src=twsrc%5Etfw">@drob</a>&#39;s tidyverse course. <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/datascience?src=hash&amp;ref_src=twsrc%5Etfw">#datascience</a></p>&mdash; Sam Tyner (@sctyner) <a href="https://twitter.com/sctyner/status/1006966996246908931?ref_src=twsrc%5Etfw">June 13, 2018</a></blockquote>
-</amp-twitter>
-
-<amp-twitter width="400" height="400"
-             layout="responsive"
-             data-tweetid="1007669101764935681">
-    <blockquote placeholder><p lang="en" dir="ltr">new blog post: a casual case study on how to speed up <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> code featuring xml2, rcpp and furrr<a href="https://t.co/KOACH1O8dy">https://t.co/KOACH1O8dy</a> <a href="https://t.co/63T0SMsxH7">pic.twitter.com/63T0SMsxH7</a></p>&mdash; alex hayes (@alexpghayes) <a href="https://twitter.com/alexpghayes/status/1007669101764935681?ref_src=twsrc%5Etfw">June 15, 2018</a></blockquote>
+             data-tweetid="1008669403477630977">
+    <blockquote placeholder><p lang="en" dir="ltr">I&#39;ve been thinking about why this is counterintuitive, even (especially?) to people experienced in probability. I think it&#39;s because effects like linearity of expected value spoil us in being able to treat events as independent even if they aren&#39;t  <a href="https://t.co/mJd8h4vVGy">https://t.co/mJd8h4vVGy</a></p>&mdash; David Robinson (@drob) <a href="https://twitter.com/drob/status/1008669403477630977?ref_src=twsrc%5Etfw">June 18, 2018</a></blockquote>
 </amp-twitter>
 
 ## Miscellaneous
