Day 30: fix typo

--- a/_posts/2018-06-18-day-30.md
+++ b/_posts/2018-06-18-day-30.md
@@ -2,7 +2,7 @@
 title: Day 30
 date: 2018-06-18 00:00:00 +00:00
 layout: post
-description: Tap of Occasional Insights
+description: Tap of Occasional Insight
 ---
 
 ## (VQA) Bilinear Attention Networks
