Day 36 Take 2: change section title

--- a/_posts/2018-06-24-day-36.md
+++ b/_posts/2018-06-24-day-36.md
@@ -74,7 +74,7 @@ description: A PhD is Not a Picnic
     <blockquote placeholder><p lang="en" dir="ltr">My colleague Raghu has just released &quot;Quantizing deep convolutional networks for efficient inference&quot; - <a href="https://t.co/D87ziflTqd">https://t.co/D87ziflTqd</a><br>This white paper covers practical quantization approaches for most common CNNs in <a href="https://twitter.com/TensorFlow?ref_src=twsrc%5Etfw">@TensorFlow</a>, I think it will be super useful!</p>&mdash; Pete Warden (@petewarden) <a href="https://twitter.com/petewarden/status/1010180240419753985?ref_src=twsrc%5Etfw">June 22, 2018</a></blockquote>
 </amp-twitter>
 
-### rstats
+### Data Manipulation in R
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1011068724978290690">
