Day 38 take 2: add two related tweets

--- a/_posts/2018-06-26-day-38.md
+++ b/_posts/2018-06-26-day-38.md
@@ -48,6 +48,12 @@ Edward Tufte said in a tweet that #rstats users can't do text on graph and typog
     <blockquote placeholder><p lang="en" dir="ltr">Tracking Emerges by Colorizing Videos. Vondrick et al presented this at the GAN tutorial, and you’ve got to see the videos to believe it! <a href="https://t.co/WovNHz3F6v">https://t.co/WovNHz3F6v</a> <a href="https://twitter.com/hashtag/computervision?src=hash&amp;ref_src=twsrc%5Etfw">#computervision</a> <a href="https://t.co/6rCdwGsRhT">pic.twitter.com/6rCdwGsRhT</a></p>&mdash; Tomasz Malisiewicz (@quantombone) <a href="https://twitter.com/quantombone/status/1011691325282897920?ref_src=twsrc%5Etfw">June 26, 2018</a></blockquote>
 </amp-twitter>
 
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1012022960767418368">
+    <blockquote placeholder><p lang="en" dir="ltr">Our latest work shows that learning to colorize videos causes visual tracking to emerge automatically!<br><br>Blog: <a href="https://t.co/FDVzJmmZ7h">https://t.co/FDVzJmmZ7h</a><br>Paper: <a href="https://t.co/U4jS83iI7B">https://t.co/U4jS83iI7B</a><a href="https://twitter.com/alirezafathi?ref_src=twsrc%5Etfw">@alirezafathi</a> <a href="https://twitter.com/kevskibombom?ref_src=twsrc%5Etfw">@kevskibombom</a> <a href="https://twitter.com/sguada?ref_src=twsrc%5Etfw">@sguada</a> <a href="https://twitter.com/abhi2610?ref_src=twsrc%5Etfw">@abhi2610</a> <a href="https://t.co/R3vMR3raFJ">pic.twitter.com/R3vMR3raFJ</a></p>&mdash; Carl Vondrick (@cvondrick) <a href="https://twitter.com/cvondrick/status/1012022960767418368?ref_src=twsrc%5Etfw">June 27, 2018</a></blockquote>
+</amp-twitter>
+
 ### Cyclical Layer Learning Rates
 <amp-twitter width="400" height="400"
              layout="responsive"
@@ -130,6 +136,12 @@ Edward Tufte said in a tweet that #rstats users can't do text on graph and typog
              layout="responsive"
              data-tweetid="1011664890208112642">
     <blockquote placeholder><p lang="en" dir="ltr">Man, it&#39;s a shame <a href="https://twitter.com/EdwardTufte?ref_src=twsrc%5Etfw">@EdwardTufte</a> said this is impossible to do in <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> with just code. I guess I shld delete my blog post. <a href="https://t.co/sw5CHXxViY">https://t.co/sw5CHXxViY</a> <a href="https://t.co/QC2FlgP1oT">pic.twitter.com/QC2FlgP1oT</a></p>&mdash; hrbrmstr (@hrbrmstr) <a href="https://twitter.com/hrbrmstr/status/1011664890208112642?ref_src=twsrc%5Etfw">June 26, 2018</a></blockquote>
+</amp-twitter>
+
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1012063547130597376">
+    <blockquote placeholder><p lang="en" dir="ltr">After Edward Tufte&#39;s remarks about graphs and text in R, by happy coincidence I just got the proofs for my <a href="https://twitter.com/PrincetonUPress?ref_src=twsrc%5Etfw">@PrincetonUPress</a> book. All the graphs were made programmatically. The pipeline for the book ms and the website (<a href="https://t.co/NNfOGc4f5l">https://t.co/NNfOGc4f5l</a> ) start from the same Rmd sources. <a href="https://t.co/UQSbmDQHC5">pic.twitter.com/UQSbmDQHC5</a></p>&mdash; Kieran Healy (@kjhealy) <a href="https://twitter.com/kjhealy/status/1012063547130597376?ref_src=twsrc%5Etfw">June 27, 2018</a></blockquote>
 </amp-twitter>
 
 ### [dataviz] Tufte in R
