Day 41 Take 2: Add one more tweet

--- a/_posts/2018-06-29-day-41.md
+++ b/_posts/2018-06-29-day-41.md
@@ -41,6 +41,12 @@ description: Scientists on Twitter
     <blockquote placeholder><p lang="en" dir="ltr">Important work from <a href="https://twitter.com/sarahookr?ref_src=twsrc%5Etfw">@sarahookr</a>, <a href="https://twitter.com/doomie?ref_src=twsrc%5Etfw">@doomie</a>, <a href="https://twitter.com/piekindermans?ref_src=twsrc%5Etfw">@piekindermans</a>, and <a href="https://twitter.com/_beenkim?ref_src=twsrc%5Etfw">@_beenkim</a> on quantifying the extent to which various saliency methods *actually* find relevant portions of images. <br><br>Really happy to see more work towards bringing rigor into interpretability! <a href="https://t.co/AHvi2N3Ods">https://t.co/AHvi2N3Ods</a> <a href="https://t.co/kSMONsOFB2">pic.twitter.com/kSMONsOFB2</a></p>&mdash; Ari Morcos (@arimorcos) <a href="https://twitter.com/arimorcos/status/1012726386396663810?ref_src=twsrc%5Etfw">June 29, 2018</a></blockquote>
 </amp-twitter>
 
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1013072420671033345">
+    <blockquote placeholder><p lang="en" dir="ltr">sounds relatively similar to permutation importance, but with removal instead of permutation (<a href="https://t.co/5fyL81kL1o">https://t.co/5fyL81kL1o</a>)</p>&mdash; Sebastian Raschka (@rasbt) <a href="https://twitter.com/rasbt/status/1013072420671033345?ref_src=twsrc%5Etfw">June 30, 2018</a></blockquote>
+</amp-twitter>
+
 ## Tutorials / Reviews
 ### What a Smartphone User is Doing
 <amp-twitter width="400" height="400"
