Found a back up of Tufte's tweet

--- a/_posts/2018-06-26-day-38.md
+++ b/_posts/2018-06-26-day-38.md
@@ -7,6 +7,15 @@ description: Tufte Controversy
 
 Edward Tufte said in a tweet that #rstats users can't do text on graph and typography right. The tweet was removed just before the publication of the first edition of this post.
 
+Back up:
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1011701873240428545"
+             data-conversation="none">
+    <blockquote placeholder><p lang="en" dir="ltr">For the many of us who are blocked by ET <a href="https://t.co/blFC30zh3C">pic.twitter.com/blFC30zh3C</a></p>&mdash; ᴘʜɪʟɪᴘ sʜᴇᴍᴇʟʟᴀ (@philshem) <a href="https://twitter.com/philshem/status/1011701873240428545?ref_src=twsrc%5Etfw">June 26, 2018</a></blockquote>
+</amp-twitter>
+
+
 ## Writing Compelling EDAs
 <amp-twitter width="400" height="400"
              layout="responsive"
