Day 46 Take 2: Fill description field

--- a/_posts/2018-07-04-day-46.md
+++ b/_posts/2018-07-04-day-46.md
@@ -2,7 +2,7 @@
 title: Day 46
 date: 2018-07-04 00:00:00 +00:00
 layout: post
-description:
+description: A Whole New Level of Production Quality
 ---
 
 ## Independence from “95%”
