Update domain name

--- a/_posts/2018-06-03-day-15.md
+++ b/_posts/2018-06-03-day-15.md
@@ -49,7 +49,7 @@ Jason Fried predicted it years ago (2014):
 </amp-twitter>
 
 ## truly-ism (cont.)
-[Continuing the topic from Yesterday](https://www.datasciencetweetsoftheday.ml/post/2018/06/02/day-14/#truly-ism)
+[Continuing the topic from Yesterday](https://dstotd.ceshine.net/post/2018/06/02/day-14/#truly-ism)
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1003362715845517314">
