--- a/_posts/2018-06-14-day-26.md
+++ b/_posts/2018-06-14-day-26.md
@@ -13,7 +13,7 @@ description: Neural Scene Representation and Rendering
 </amp-twitter>
 
 ## Pre-trained Transformer in PyTorch (NLP)
-[Reference: Day 23 NLP Transfer Learning / OpenAI](https://www.datasciencetweetsoftheday.ml/post/2018/06/11/day-23/#openai)
+[Reference: Day 23 NLP Transfer Learning / OpenAI](https://dstotd.ceshine.net/post/2018/06/11/day-23/#openai)
 <amp-twitter width="400" height="400"
              layout="responsive"
              data-tweetid="1007285778618167299">
