Day 55 Take 2: add a mybinder tweet

--- a/_posts/2018-07-13-day-55.md
+++ b/_posts/2018-07-13-day-55.md
@@ -2,7 +2,7 @@
 title: Day 55
 date: 2018-07-13 00:00:00 +00:00
 layout: post
-description: A "Cookbook" for GAN research 
+description: A "Cookbook" for GAN research
 ---
 
 ## On “solving” Montezuma’s Revenge
@@ -90,4 +90,10 @@ description: A "Cookbook" for GAN research
              layout="responsive"
              data-tweetid="1017787526952701954">
     <blockquote placeholder><p lang="en" dir="ltr"><a href="https://t.co/cAsWniw70d">https://t.co/cAsWniw70d</a> is too cool.<br><br>I&#39;ve updated my <a href="https://twitter.com/hashtag/DataScience?src=hash&amp;ref_src=twsrc%5Etfw">#DataScience</a> &amp; <a href="https://twitter.com/hashtag/MachineLearning?src=hash&amp;ref_src=twsrc%5Etfw">#MachineLearning</a> projects repo so you can run my &quot;Example <a href="https://twitter.com/hashtag/Python?src=hash&amp;ref_src=twsrc%5Etfw">#Python</a> Machine Learning Notebook&quot; directly in your browser, no installation required: <a href="https://t.co/amYzf1e66Q">https://t.co/amYzf1e66Q</a><br><br>Will update other projects as I get time. <a href="https://t.co/5m18xpcc2K">pic.twitter.com/5m18xpcc2K</a></p>&mdash; Randy Olson (@randal_olson) <a href="https://twitter.com/randal_olson/status/1017787526952701954?ref_src=twsrc%5Etfw">July 13, 2018</a></blockquote>
+</amp-twitter>
+
+<amp-twitter width="400" height="400"
+             layout="responsive"
+             data-tweetid="1018133079469240321">
+    <blockquote placeholder><p lang="en" dir="ltr">This is so cool. Automatically create a <a href="https://twitter.com/Docker?ref_src=twsrc%5Etfw">@Docker</a> from your <a href="https://twitter.com/github?ref_src=twsrc%5Etfw">@github</a> repo and create a <a href="https://twitter.com/ProjectJupyter?ref_src=twsrc%5Etfw">@ProjectJupyter</a> notebook too! Great idea to help with code lifespan! <a href="https://t.co/sK8Z1GtJdm">pic.twitter.com/sK8Z1GtJdm</a></p>&mdash; Olivia Guest (@o_guest) <a href="https://twitter.com/o_guest/status/1018133079469240321?ref_src=twsrc%5Etfw">July 14, 2018</a></blockquote>
 </amp-twitter>
